<resources>
    <string name="app_name">图书捐赠</string>
    <string name="title_activity_login">图书捐赠</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvForgetPass"><u>忘记密码</u></string>
    <string name="etName">请输入账号</string>
    <string name="etPass">请输入密码</string>
    <string name="btLogin">登录</string>
    <string name="btRegister">注册</string>
    <string name="title_activity_alarm_clock">AlarmClockActivity</string>
    <string name="card_content">图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！
        图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！
        图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！
        图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！
        图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！
        图书捐赠是一款很棒的APP！图书捐赠是一款很棒的APP！</string>
</resources>
