<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="登录"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="40dp"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/login"
            android:background="@drawable/logintop_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/loginImageView"/>
            <EditText
                android:layout_marginTop="80dp"
                android:id="@+id/etName"
                android:hint="@string/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:drawableLeft="@drawable/usersign"
                android:drawablePadding="10dp"
                android:background="@android:drawable/edit_text"
                android:ems="10">
                <requestFocus />
            </EditText>
            <EditText
                android:id="@+id/etPass"
                android:hint="@string/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etName"
                android:layout_below="@+id/etName"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/edit_text"
                android:drawableLeft="@drawable/userlock"
                android:drawablePadding="13dp"
                android:ems="10"
                android:inputType="textPassword" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etPass"
                android:layout_below="@+id/etPass"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btLogin"
                    android:layout_weight="1"
                    android:background="@drawable/btchange_bg"
                    ></Button>
                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btchange_bg"
                    android:text="@string/btRegister"
                    android:layout_marginLeft="5dp"></Button>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_marginRight="16dp"
            android:layout_marginTop="320dp"
            android:textColor="#FF0000"
            android:id="@+id/tvForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/tvForgetPass" />
    </RelativeLayout>


</LinearLayout>
